--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,11 +16,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 8
+    - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
-        java-version: '1.8'
-        distribution: 'adopt'
+        java-version: '17'
+        distribution: 'temurin'
         cache: maven
     - name: Build with Maven
       run: mvn -B clean package --file pom.xml
