--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,6 +2,10 @@
 parsePlaceholders: false
 # Whether to not send messages when vanished player joins/leaves
 ignoreVanished: true
+# Whether to remove the vanilla join message
+removeDefaultJoin: true
+# Whether to remove the vanilla leave message
+removeDefaultLeave: true
 
 # Default options
 default:
@@ -15,8 +19,6 @@ default:
       use: true
       # Custom server join message (empty for default)
       message: ''
-      # Whether to remove the vanilla join message
-      removeDefault: true
     # When a player logs in using AuthMe (use this INSTEAD OF join.server, requires AuthMe)
     authme:
       # Whether message should be sent when a player logs in using AuthMe
@@ -41,8 +43,6 @@ default:
       use: true
       # Custom server leave message (empty for default)
       message: ''
-      # Whether to remove the vanilla leave message
-      removeDefault: true
     # When a player logs out using AuthMe (using '/logout', this doesn't include leaving the server so use this WITH leave.server, requires AuthMe)
     authme:
       # Whether message should be sent when a player logs out using AuthMe
