Fix join message not shown to player in some cases

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,7 +12,7 @@ commands:
     usage: /<command> [reload|help]
 permissions:
   pwjlm.update:
-    description: Recive update notification
+    description: Receive update notification
     default: op
   pwjlm.command:
     description: Default command usage permission
